optimizes test case execution
1.  Forced tests and coverage tests to single threaded mode, allowing semaphores to be removed
2.  Reduced tile bin count in tests to improve execution times