@@ -90,12 +90,16 @@ checkScoverage {
   minimumRate = 0.75
 }
 
+// test and scoverage tests should be forced to single threaded execution
+// since Spark can't run multiple contexts within in a single JVM
 test {
-  // There is an issue with the interop between the scoverage plugin and the scalatest plugin
-  // that causes this argument to be ignored when tests run via 'gradle build'.  The arg is
-  // respected when 'gradle test' is used.  Current workaround is to force test cases involving
-  // Spark (which needs to be run single threaded) to be executed serially via mutex.
   maxParallelForks = 1
+  jvmArgs += ["-XX:MaxPermSize=512m", "-Xmx1000m"]
+}
+
+testScoverage {
+  maxParallelForks = 1
+  jvmArgs += ["-XX:MaxPermSize=512m", "-Xmx1000m"]
 }
 
 // Creation of a distribution archive containing the pipeline assembly jar and the baseline
@@ -140,6 +144,7 @@ dependencies {
   compile "software.uncharted.salt:salt-core:1.1.0"
   compile "software.uncharted.sparkpipe:sparkpipe-core:0.9.4"
 	compile "org.clapper:grizzled-slf4j_$dependencyScalaVersion:1.0.2"
+  compile 'log4j:apache-log4j-extras:1.2.17'
   compile "org.spire-math:spire_$dependencyScalaVersion:0.11.0"
   compile "com.amazonaws:aws-java-sdk:1.3.11"
   compile "com.databricks:spark-csv_$dependencyScalaVersion:1.3.0"
